ffmpeg: dont exit 0 if fewer than 1/3 of the input could be decoded.

Fixes Ticket2405

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>